--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
 <!-- End Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
    </head>
    <body>
-<!--       <iframe src="https://sandbox-demo.interactvty.com/cmp/#/content/" id="_qc_cookie_access"></iframe> -->
-      <iframe width='560' height='315' src='https://candy.interactvty.com/#/content/content-view/6798?iframe' frameBorder='0' allowfullscreen></iframe>
+      <iframe src="https://sandbox-demo.interactvty.com/cmp/#/content/" id="_qc_cookie_access"></iframe>
    </body>
 </html>
