--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
 <!-- End Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
    </head>
    <body>
-      <iframe src="https://sandbox-demo.interactvty.com/cmp/#/content/" id="_qc_cookie_access"></iframe>
+<!--       <iframe src="https://sandbox-demo.interactvty.com/cmp/#/content/" id="_qc_cookie_access"></iframe> -->
    </body>
 </html>
