--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ uid:"__INSERT_EMAIL_HERE__"
 <!-- End Quantcast tag -->
    </head>
    <body>
-      <p>PRUEBA API</p>
+      <p style="color:blue">PRUEBA API</p>
    </body>
 </html>
